--- a/reat_prj_05/src/view/MainImageView.css
+++ b/reat_prj_05/src/view/MainImageView.css
@@ -1,10 +1,10 @@
 .slide-container {
-    height: 200px;
-    height: fit-content;
-    margin: 0 auto;
+  height: 200px;
+  height: fit-content;
+  margin: 0 auto;
 }
 
-img {
-    width: 100%;
-    height: 400px;
+.main_img {
+  width: 100%;
+  height: 400px;
 }
