add item detail popup

--- a/reat_prj_05/src/view/ItemView.css
+++ b/reat_prj_05/src/view/ItemView.css
@@ -28,9 +28,15 @@
 .sub_imgs {
   padding: 1rem;
 }
+
 .sub_wrap {
   width: 800px;
   margin: auto;
   /* border: 1px solid black; */
+}
+
+.popupButton {
   background-color: lightskyblue;
+  border: 0;
+  padding: 0;
 }
