--- a/reat_prj_05/src/view/ItemView.css
+++ b/reat_prj_05/src/view/ItemView.css
@@ -8,6 +8,15 @@
   text-align: center;
 }
 
+.sub_check {
+  width: 1200px;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 0 auto;
+  margin-top: 5rem;
+  text-align: center;
+}
+
 .sub_img h1 {
   justify-content: center;
   padding-top: 5rem;
