Decorating item detail

--- a/reat_prj_05/src/view/ItemView.css
+++ b/reat_prj_05/src/view/ItemView.css
@@ -32,6 +32,7 @@
 
 .img_wrap {
   display: inline;
+  overflow-y: scroll;
 }
 
 .sub_imgs {
@@ -48,4 +49,8 @@
   background-color: lightskyblue;
   border: 0;
   padding: 0;
+}
+
+.modal {
+  overflow-y: scroll;
 }
