--- a/reat_prj_05/src/view/MainImageView.css
+++ b/reat_prj_05/src/view/MainImageView.css
@@ -3,6 +3,12 @@
   margin: 0 auto;
 }
 
+.detail-title {
+  
+  /* height: 30px;
+  line-height: 30px; */
+}
+
 .main_img {
   width: 100%;
   height: 400px;
