--- a/reat_prj_05/src/view/ItemView.css
+++ b/reat_prj_05/src/view/ItemView.css
@@ -9,7 +9,8 @@
 }
 
 .sub_check {
-  width: 1200px;
+  /* display: inline-flex; */
+  width: 100%;
   border: 1px solid black;
   border-radius: 10px;
   margin: 0 auto;
