--- a/reat_prj_05/src/view/ItemView.css
+++ b/reat_prj_05/src/view/ItemView.css
@@ -129,3 +129,10 @@ ul div .btn:hover i {
   width: 800px;
   z-index: 9999;
 }
+
+.cart_info h3 {
+  font-size: 10px;
+}
+.cart_info h2 {
+  font-size: 15px;
+}
