--- a/reat_prj_05/src/view/Selected_itemView.scss
+++ b/reat_prj_05/src/view/Selected_itemView.scss
@@ -27,3 +27,12 @@
   justify-items: auto;
   padding: 1rem;
 }
+
+// .cart_info {
+//   h3 {
+//     font-size: 13px;
+//   }
+//   h2 {
+//     font-size: 16px;
+//   }
+// }
