--- a/reat_prj_05/src/view/ItemView.scss
+++ b/reat_prj_05/src/view/ItemView.scss
@@ -3,5 +3,29 @@
     .float_btn {
       display: block;
     }
+    img {
+      border: 3px solid #17ad88;
+    }
   }
+}
+
+.allItem_wrap {
+  width: 1000px;
+  padding: 4rem;
+  // border: 5px solid red;
+}
+
+.sub_check {
+  width: 100%;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 0 auto;
+  margin-top: 5rem;
+  text-align: center;
+}
+
+.mainList {
+  width: 1200px;
+  margin: 0 auto;
+  display: inline-flex;
 }
