--- a/reat_prj_05/src/view/Selected_itemView.scss
+++ b/reat_prj_05/src/view/Selected_itemView.scss
@@ -1,6 +1,15 @@
+.sp_cart_wrap {
+  margin: 2rem;
+  border-top: 1px solid rgb(223, 223, 223);
+  padding: 2rem;
+  h1 {
+    padding-bottom: 2rem;
+  }
+}
+
 .sp_cart {
   padding: 10rem 0;
-  margin: auto;
+  //   margin: 10rem auto;
 
   border-top: 1px solid black;
   button {
@@ -9,10 +18,6 @@
     margin: 5px;
     background: transparent;
     text-decoration: none;
-    // &:hover {
-    //   background-color: green;
-    //   transition: ease-in 3s;
-    // }
   }
 }
 
@@ -27,12 +32,3 @@
   justify-items: auto;
   padding: 1rem;
 }
-
-// .cart_info {
-//   h3 {
-//     font-size: 13px;
-//   }
-//   h2 {
-//     font-size: 16px;
-//   }
-// }
