--- a/reat_prj_05/src/container/Selected_item.css
+++ b/reat_prj_05/src/container/Selected_item.css
@@ -20,7 +20,7 @@
   margin-top: 3rem;
   margin-bottom: 1rem;
   padding: 10px;
-  background-color: rgb(36, 117, 36);
+  background-color: #3aa1dd;
   color: white;
   border-radius: 10px;
   text-align: center;
