--- a/reat_prj_05/src/view/MiddleContentView.scss
+++ b/reat_prj_05/src/view/MiddleContentView.scss
@@ -16,14 +16,14 @@
     font-family: "BMHANNAAir","NanumGothic", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.header {
+.middle-title {
     width: 100%;
     text-align: center;
     font-size: 2.5rem;
     color : #ffffff !important;
 }
 
-.main-container {
+.middle-container {
     align-content: center !important;
     width: 100%;
     height: 450px;
@@ -33,7 +33,7 @@
     vertical-align: middle !important;
 }
 
-.content {
+.middle-content {
     font-family: "BMHANNAAir", "NanumGothic";
     background-color: #ffffff;
     text-align: center;
@@ -43,12 +43,12 @@
     overflow: hidden;
 }
 
-.content-header {
+.middle-header {
     color : #3aa1dd !important;
     font-weight: bold;
 }
 
-.content-body {
+.middle-body {
     padding: 10px 40px;
     line-height: 20px;
     margin: 0 auto;
