--- a/reat_prj_05/src/view/MiddleContentView.scss
+++ b/reat_prj_05/src/view/MiddleContentView.scss
@@ -49,7 +49,7 @@
 }
 
 .content-body {
-    padding: 10px 40px;
+    padding: 10px 40px 0px;
     line-height: 20px;
     margin: 0 auto;
     font-size: 15px;
