--- a/reat_prj_05/src/container/ItemListContainer.scss
+++ b/reat_prj_05/src/container/ItemListContainer.scss
@@ -3,7 +3,7 @@
   }
 }
 
-#subscription_point { 
+#subscription_point {
   height: 1px;
 }
 
@@ -34,7 +34,7 @@
     padding: 2rem;
     background-color: #59a1ca;
     height: 150px;
-    width: 1300px;
+    width: 100%;
     border-radius: 10px;
     display: inline-flex;
     justify-content: space-evenly;
