--- a/reat_prj_05/src/view/menu/footer.scss
+++ b/reat_prj_05/src/view/menu/footer.scss
@@ -3,6 +3,10 @@
   padding: 3rem;
   background-color: rgb(238, 238, 238);
   text-align: center;
+  .logo {
+    padding: 0;
+  }
+
   h3,
   h4 {
     margin: 0;
@@ -23,15 +27,22 @@
 .footer_top {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   padding-bottom: 2rem;
+  align-items: center;
   img {
-    width: 50px;
+    width: 70px;
+    margin: 0;
+    padding: 0;
   }
   span {
     display: inline-flex;
     text-align: right;
     right: 0;
 
+    h2 {
+      padding: 0;
+    }
     h3 {
       padding-left: 1rem;
     }
