--- a/reat_prj_05/src/view/ItemView.scss
+++ b/reat_prj_05/src/view/ItemView.scss
@@ -119,7 +119,8 @@
   left: 40%;
   font-size: 3rem;
   color: white;
-  font-family: "NanumGothic";
+  font-weight: bolder;
+  font-family: "BMHANNAAir";
 
   &:hover {
     padding: 3px;
